test/fail/internal/invalid_match_case_return_fold.lly
#[
SyntaxError: Missing return statement at end of function.
    from invalid_match_case_return_fold.lly:14
]#

define f(a: Option[integer]) : integer
{
    match a: {
        case Some(s):
            s = 1
        case None:
            return 2
    }
}
